--- a/UtlsLogTool/package.json
+++ b/UtlsLogTool/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --progress --profile --colors --display-error-details --display-cached",
     "postinstall": "typings install",
     "start": "electron main.ts",
-	"clean": "rm -rf ./dist",
+    "clean": "rm -rf ./dist",
     "clean-win": "rm -rf ./dist/windows",
     "clean-lin": "rm -rf ./dist/linux",
     "clean-osx": "rm -rf ./dist/osx",
@@ -45,6 +45,10 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "immutable": "^3.7.6",
+    "moment": "^2.17.1",
+    "ng2-bootstrap": "^1.4.1",
+    "ng2-date-picker": "^0.4.0",
+    "ng2-datetime-picker": "^0.14.7",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
