--- a/UtlsLogTool/package.json
+++ b/UtlsLogTool/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "build": "webpack --progress --profile --colors --display-error-details --display-cached",
+    "build": "npm run lint && webpack --progress --profile --colors --display-error-details --display-cached",
+    "lint": "tslint ./app/**/*.ts",
+    "test": "karma start ./karma/karma.conf.js",
     "postinstall": "typings install",
     "start": "electron main.ts",
     "clean": "rm -rf ./dist",
@@ -23,8 +25,17 @@
     "electron": "^1.4.1",
     "electron-packager": "^8.4.0",
     "es6-shim": "^0.34.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.5.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "phantomjs-prebuilt": "^2.1.14",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.7.2",
+    "tslint": "^4.5.1",
     "typescript": "^2.1.4",
     "typings": "^1.3.2",
     "webpack": "^1.12.9",
