--- a/UtlsLogTool/package.json
+++ b/UtlsLogTool/package.json
@@ -7,8 +7,7 @@
     "build": "npm run lint && webpack --progress --profile --colors --display-error-details --display-cached",
     "lint": "tslint ./app/**/*.ts",
     "test": "karma start ./karma/karma.conf.js",
-    "postinstall": "typings install",
-    "start": "electron main.ts",
+    "start": "electron .",
     "clean": "rm -rf ./dist",
     "clean-win": "rm -rf ./dist/windows",
     "clean-lin": "rm -rf ./dist/linux",
@@ -20,9 +19,14 @@
   "author": "AndersMollmark",
   "license": "MIT",
   "devDependencies": {
+    "@types/jasmine": "2.5.41",
+    "@types/node": "^6.0.48",
+    "angular2-router-loader": "^0.3.4",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^2.2.4",
     "concurrently": "^2.2.0",
     "css-loader": "^0.26.1",
-    "electron": "^1.4.1",
+    "electron": "1.6.2",
     "electron-packager": "^8.4.0",
     "es6-shim": "^0.34.0",
     "jasmine-core": "^2.5.2",
@@ -30,37 +34,41 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
+    "karma-webpack": "2.0.3",
     "phantomjs-prebuilt": "^2.1.14",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.7.2",
+    "raw-loader": "^0.5.1",
+    "to-string-loader": "^1.1.4",
     "tslint": "^4.5.1",
-    "typescript": "^2.1.4",
-    "typings": "^1.3.2",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "typescript": "2.1.1",
+    "webpack": "^2.1.0-beta.22",
+    "webpack-dev-server": "2.1.0-beta.11"
   },
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
-    "@types/lodash": "^4.14.45",
-    "angular-in-memory-web-api": "~0.2.2",
+    "@angular/common": "~2.2.1",
+    "@angular/compiler": "~2.2.1",
+    "@angular/compiler-cli": "~2.2.1",
+    "@angular/core": "~2.2.1",
+    "@angular/forms": "~2.2.1",
+    "@angular/http": "~2.2.1",
+    "@angular/platform-browser": "~2.2.1",
+    "@angular/platform-browser-dynamic": "~2.2.1",
+    "@angular/platform-server": "~2.2.1",
+    "@angular/router": "~3.2.1",
+    "@angular/upgrade": "~2.2.1",
     "angular2-datatable": "^0.5.2",
+    "angular2-in-memory-web-api": "0.0.21",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "immutable": "^3.7.6",
+    "jsonfile": "^2.4.0",
+    "@types/lodash": "ts2.0",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "ng2-bootstrap": "^1.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.1",
-    "systemjs": "0.19.40",
+    "rxjs": "5.1.0",
     "zone.js": "^0.7.4"
   }
 }
