--- a/UserTransactionLogServer/nbproject/project.properties
+++ b/UserTransactionLogServer/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.activemq-openwire-legacy-5.11.1.jar=lib/activemq-openwire-legacy-
 file.reference.activemq-pool-5.11.1.jar=lib/activemq-pool-5.11.1.jar
 file.reference.activemq-spring-5.11.1.jar=lib/activemq-spring-5.11.1.jar
 file.reference.aopalliance-1.0.jar=lib/aopalliance-1.0.jar
+file.reference.commons-codec-1.9.jar=lib/commons-codec-1.9.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.commons-pool-1.6.jar=lib/commons-pool-1.6.jar
 file.reference.geronimo-j2ee-management_1.1_spec-1.0.1.jar=lib/geronimo-j2ee-management_1.1_spec-1.0.1.jar
@@ -101,7 +102,8 @@ javac.classpath=\
     ${file.reference.spring-messaging-4.1.0.RELEASE.jar}:\
     ${file.reference.spring-tx-4.1.0.RELEASE.jar}:\
     ${file.reference.xbean-spring-3.12.jar}:\
-    ${file.reference.xstream-1.4.7.jar}
+    ${file.reference.xstream-1.4.7.jar}:\
+    ${file.reference.commons-codec-1.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
