--- a/UtlsLogTool/package.json
+++ b/UtlsLogTool/package.json
@@ -57,16 +57,17 @@
     "@angular/platform-server": "~2.4.0",
     "@angular/router": "~3.4.0",
     "@angular/upgrade": "~2.4.0",
+    "@types/lodash": "ts2.0",
     "angular2-datatable": "^0.6.0",
     "angular2-in-memory-web-api": "0.0.21",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "immutable": "^3.7.6",
     "jsonfile": "^2.4.0",
-    "@types/lodash": "ts2.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "ng2-bootstrap": "^1.4.1",
+    "node-rsa": "^0.4.2",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.1.0",
     "zone.js": "^0.7.4"
