--- a/UtlsLogTool/package.json
+++ b/UtlsLogTool/package.json
@@ -66,6 +66,7 @@
     "jsonfile": "^2.4.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "moment-timezone": "^0.5.13",
     "ng2-bootstrap": "^1.4.1",
     "node-rsa": "^0.4.2",
     "reflect-metadata": "^0.1.8",
