--- a/UtlsLogTool/package.json
+++ b/UtlsLogTool/package.json
@@ -26,6 +26,7 @@
     "awesome-typescript-loader": "^2.2.4",
     "concurrently": "^2.2.0",
     "css-loader": "^0.26.1",
+    "devtron": "^1.4.0",
     "electron": "1.6.2",
     "electron-packager": "^8.4.0",
     "es6-shim": "^0.34.0",
